# LStartlet

./: .flake8  .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  check-local.bat  final_test_ui_fix.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
core/: __init__.py  decorators.py
core/cicd/: __init__.py  builder.py  cicd_controller.py  deep_learning_manager.py  dependency_installer.py  deployer.py  pipeline.py  tester.py
core/command/: __init__.py  command_base.py  command_events.py  command_executor.py  command_registry.py  example_usage.py
core/config/: __init__.py  config_item.py  config_manager.py  constants.py  utils.py
core/di/: __init__.py  container_config.py  exceptions.py  service_container.py  service_descriptor.py  service_registry.py
core/error/: __init__.py  error_handler.py  exceptions.py  formatter.py
core/event/: __init__.py  base_event.py  event_bus.py  event_handler.py  event_interceptor.py  event_type_registry.py
core/logger/: __  init__.py  __init__.py  handler.py  level.py  logger.py
core/path/: __init__.py  constants.py  path_manager.py  utils.py
core/persistence/: __init__.py  persistence_manager.py
core/process/: __init__.py  process_manager.py
core/scheduler/: __init__.py  config_manager.py  process_manager.py  scheduler.py  scheduler_factory.py  simple_thread_scheduler.py  task_dispatcher.py  thread_safe_scheduler.py  tick.py
core/system/: __init__.py  config_manager.py  system_detector.py
core/version_control/: __init__.py  dependency_resolver.py  version_controller.py
docs/: project_specification.md  public_api_guide.md
examples/: complete_example.py  event_system_example.py
plugin/: __init__.py  metadata.py
plugin/base/: plugin_base.py  plugin_interface.py
plugin/events/: plugin_events.py
plugin/example_ocr_plugin/: __init__.py  plugin.json  setup.py
plugin/exceptions/: plugin_exceptions.py
plugin/manager/: dependency_manager.py  plugin_loader.py  plugin_manager.py
plugin_deps/: example_ocr_plugin-1.0.0-py3-none-any.whl
scripts/: check-local.bat  clean_cache.py
src/LStartlet/: __init__.py  _application_info.py  _cicd_decorator.py  _config.py  _config_manager.py  _framework.py  (+14 more)
tests/: __init__.py  conftest.py  run_tests.py  test_auto_plugin_register.py  test_auto_register_decorator.py  test_button_events.py  test_cicd_builder.py  test_cicd_controller.py  test_cicd_deep_learning_manager.py  test_cicd_dependency_installer.py  test_cicd_deployer.py  test_cicd_pipeline.py  test_cicd_tester.py  test_command_decorator.py  test_command_system.py  test_config.py  test_config_auto_save.py  test_config_manager.py  test_config_manager_internal.py  test_decorator_flexibility.py  test_decorators.py  test_di_container.py  test_di_decorator.py  test_error.py  test_error_decorator.py  test_event_bus.py  test_event_decorator.py  test_event_interception.py  test_global_context.py  test_injection_methods.py  test_instance_management.py  test_lifecycle_automation.py  test_lifecycle_decorator.py  test_log_formatter.py  test_logger.py  test_new_ui_factory.py  test_path.py  test_path_manager.py  test_persistence_manager.py  test_plugin_automation.py  (+26 more)
ui/: __init__.py  ui_factory.py  ui_service_registry.py
(+112 files in other folders)
