[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | test_reports
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# 只收集Test类中的测试方法，忽略模块级别的test_*函数
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
# 排除非测试类和函数的警告
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[tool.coverage.run]
source = ["src/LStartlet/core", "src/LStartlet/plugin"]
omit = [
    "*/__pycache__/*", 
    "*/tests/*", 
    "*/examples/*",
    "src/LStartlet/__pycache__/*",
    "src/LStartlet/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]